--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
 <head>
-    <title>Messung der Ruheh&ouml;rschwelle</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Mathoh</title>
+    <meta name="description" content="Messung der Ruhehörschwelle">
 </head>
+
 <body>
 
 </body>
