--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Mathoh</title>
-    <meta name="description" content="Messung der Ruhehörschwelle">
+    <title>Mathoh - Measure your ATH</title>
+    <meta name="description" content="">
 </head>
 
 <body>
