Initial tone generator.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html>
 <head>
     <title>Messung der Ruheh&ouml;rschwelle</title>
+    <script type="text/javascript" src="js/audio.js"></script>
 </head>
 <body>
-
+<input type="text" size="4" id="freq" value="440"><label for="hz">Hz</label>
+<button onclick="start()">play</button>
+<button onclick="stop()">stop</button>
 </body>
 </html>
