--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
 </head>
 
 <body>
-<input type="text" size="4" id="freq" value="440"><label for="hz">Hz</label>
-<button onclick="start()">play</button>
-<button onclick="stop()">stop</button>
+<h1 id="heading"></h1>
+
+<p id="description"></p>
+
+<hr>
+
+<section id="input"></section>
+
+<section id="output"></section>
+
+<hr>
+
+<footer>&copy; 2012</footer>
 </body>
 </html>
