--- a/index.html
+++ b/index.html
@@ -3,22 +3,36 @@
     <meta charset="utf-8">
     <title>Mathoh - Measure your ATH</title>
     <meta name="description" content="">
-    <script type="text/javascript" src="js/audio.js"></script>
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="css/default.css">
+
+    <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="js/highcharts.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+    <!--<script type="text/javascript" src="js/audio.js"></script>-->
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
-<h1 id="heading"></h1>
+<div id="main">
+    <h1 id="heading"></h1>
 
-<p id="description"></p>
+    <p id="description"></p>
 
-<hr>
+    <hr>
 
-<section id="input"></section>
+    <section id="input"></section>
 
-<section id="output"></section>
+    <section id="output">
 
-<hr>
+    </section>
 
-<footer>&copy; 2012</footer>
+    <hr>
+
+    <footer>&copy; 2012 &mdash; Mayday</footer>
+</div>
 </body>
 </html>
